validations
customer status change validations